# sampling-algo

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
benches/: sampling_bench.rs
examples/: demo.rs
random-sampling/: README.md  random_sampling.py
src/: lib.rs
src/random_sampling/: mod.rs  reservoir.rs  simple.rs  stratified.rs  systematic.rs  time_series.rs  weighted.rs
time-based-sampling/: README.md  time_based_sampling.py
